Don't require O365 auth to voice controller

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -35,6 +35,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="Voice">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <authentication mode="None" />
     <authorization>
