--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -35,7 +35,7 @@
       </authorization>
     </system.web>
   </location>
-  <location path="Voice">
+  <location path="api/Voice">
     <system.web>
       <authorization>
         <allow users="*" />
