update member status on answer/login

--- a/test/Website.UnitTests/Website.UnitTests.csproj
+++ b/test/Website.UnitTests/Website.UnitTests.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="InMemoryDbSet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoiceTestContext.cs" />
     <Compile Include="VoiceControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
