Basic support for multiple events

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -63,6 +63,10 @@
       <add name="WSFederationAuthenticationModule" type="System.IdentityModel.Services.WSFederationAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler"/>
       <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler"/>
     </modules>
+  <staticContent>
+    <remove fileExtension=".woff2" />
+    <mimeMap fileExtension=".woff2" mimeType="font/woff2"/>
+  </staticContent>
   </system.webServer>
   <system.identityModel>
     <identityConfiguration>
