--- a/src/Website/packages.config
+++ b/src/Website/packages.config
@@ -3,11 +3,12 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
   <package id="bootstrap-select" version="1.7.2" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
@@ -20,16 +21,23 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Jwt" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="RestSharp" version="105.0.1" targetFramework="net45" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net45" />
   <package id="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry" version="4.5.1" targetFramework="net45" />
   <package id="Twilio" version="4.0.3" targetFramework="net45" />
   <package id="Twilio.TwiML" version="3.3.6" targetFramework="net45" />
